# ov_axcpt

./: .gitignore  pyproject.toml
ov_experiment/: launch_openvibe-acquisition-server.bat  launch_openvibe-designer.bat
ov_experiment/scenarios/: axcpt.xml  ov_to_gdf.xml  recordingViewer.xml  sandbox.xml
ov_experiment/scenarios/config/: buttons.txt  image_display_config.xml
ov_experiment/scenarios/scripts/: main.lua  sandbox.lua  stimuli.lua
ov_experiment/scenarios/tools/: stimulus_generator.py
src/: __init__.py  default_config.yaml  experiment.py  main.ipynb
src/analysis/: processing.py
src/config/: __init__.py  _config.py  default_config.yaml
src/tools/: axcpt_stimulation_groups.yaml  eego_electrode_map.txt  helpers.py  stimulation_list.txt
