[tool.poetry]
name = "ov-axcpt"
version = "0.1.0"
description = ""
authors = ["Tiaan Boshoff <tiaanboshoff02@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pillow = "^10.1.0"
numpy = "^1.26.2"
mne = "^1.6.0"
pyqt6 = "^6.6.1"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
